<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_settings_text_size"
        android:text="@string/prices_are_euro"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/base_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />


        <EditText
            android:id="@+id/dialog_settings_base_price_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberDecimal"
            android:ems="6"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/price_per_five_minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />


        <EditText
            android:id="@+id/dialog_settings_price_per_five_minutes_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberDecimal"
            android:ems="6"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/base_price_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />


        <EditText
            android:id="@+id/dialog_settings_base_price_hour_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberDecimal"
            android:ems="6"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/price_per_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />


        <EditText
            android:id="@+id/dialog_settings_price_per_hour_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberDecimal"
            android:ems="6"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/base_price_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />


        <EditText
            android:id="@+id/dialog_settings_base_price_day_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberDecimal"
            android:ems="6"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/price_per_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />


        <EditText
            android:id="@+id/dialog_settings_price_per_day_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberDecimal"
            android:ems="6"
            android:layout_gravity="center_vertical" />
    </LinearLayout>



    <Button
        android:id="@+id/dialog_settings_reset_user"
        android:text="@string/reset_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"/>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog_edit_row_spacer" />
    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog_edit_row_spacer" />
    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog_edit_row_spacer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/dialog_settings_ok"
            android:text="@string/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"/>


        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

        <Button
            android:id="@+id/dialog_settings_cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"/>


        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>









</LinearLayout>