<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/two_euro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:id="@+id/dialog_maintain_two_euro_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:max="999" />

        <TextView
            android:id="@+id/dialog_maintain_two_euro_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/one_euro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:id="@+id/dialog_maintain_one_euro_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:max="999" />

        <TextView
            android:id="@+id/dialog_maintain_one_euro_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/fifty_cent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:id="@+id/dialog_maintain_fifty_cent_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:max="999" />

        <TextView
            android:id="@+id/dialog_maintain_fifty_cent_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/twenty_cent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:id="@+id/dialog_maintain_twenty_cent_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:max="999" />

        <TextView
            android:id="@+id/dialog_maintain_twenty_cent_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/ten_cent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:id="@+id/dialog_maintain_ten_cent_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:max="999" />

        <TextView
            android:id="@+id/dialog_maintain_ten_cent_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/five_cent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:id="@+id/dialog_maintain_five_cent_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:max="999" />

        <TextView
            android:id="@+id/dialog_maintain_five_cent_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/park_coins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:id="@+id/dialog_maintain_park_coins_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:max="999" />

        <TextView
            android:id="@+id/dialog_maintain_park_coins_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_maintain_set_default"
        android:text="@string/set_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"/>

    <Button
        android:id="@+id/dialog_maintain_load_default"
        android:text="@string/load_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"/>


    <Button
        android:id="@+id/dialog_maintain_ok"
        android:text="@string/uebernehmen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"/>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog_edit_row_spacer" />

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog_edit_row_spacer" />
    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog_edit_row_spacer" />


</LinearLayout>