<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/text1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"
    android:gravity="center_vertical"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:orientation="vertical"
    android:weightSum="1000"
    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
    android:paddingRight="?android:attr/listPreferredItemPaddingRight">

    <TextView
        android:text="@string/dummy"
        android:id="@+id/dialog_edit_ticket_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/dialog_edit_text_size"
        android:layout_weight="120"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_dialog_edit_row_spacer"
        android:layout_weight="30"/>


    <TimePicker
        android:id="@+id/dialog_edit_ticket_time_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TimePicker>



    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_dialog_edit_row_spacer"
        android:layout_weight="30"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="90">

        <TextView
            android:id="@+id/dialog_edit_ticket_text_valid"
            android:text="@string/valid"
            android:textSize="@dimen/dialog_edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <Switch
            android:id="@+id/dialog_edit_ticket_switch_valid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_dialog_edit_row"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog_edit_row_spacer"
        android:layout_weight="30"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="120">

        <TextView
            android:id="@+id/dialog_edit_ticket_text_paid"
            android:text="@string/paid"
            android:textSize="@dimen/dialog_edit_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>

        <Switch
            android:id="@+id/dialog_edit_ticket_switch_paid"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_dialog_edit_row"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dialog_edit_row_spacer"
        android:layout_weight="30"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="120">

        <Button
            android:id="@+id/dialog_edit_ticket_button_ok"
            android:text="@string/ok"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />



        <Button
            android:id="@+id/dialog_edit_ticket_button_cancel"
            android:text="@string/cancel"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>



    </LinearLayout>