<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_one_show_automata_lin_layout_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/colorBackground"
        android:layout_weight="1">


            <LinearLayout
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">


                <TextView
                    android:id="@+id/fragment_one_show_automata_text_view_display"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hello"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:typeface="monospace"
                    android:layout_margin="20dp"
                    android:layout_weight="1.43" />


            </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

            <com.example.michael.kassenautomat_dhbw.util.SquareImageButton
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:text="@string/dummy"
                android:scaleType="fitXY"
                android:background="#00000000"
                android:src="@drawable/true_red_button"
                android:id="@+id/fragment_one_show_automata_button_reset"
                android:layout_gravity="center"

                android:contentDescription="@string/image_content_description"/>

            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/colorBackground"
        android:layout_weight="1">


            <LinearLayout
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:id="@+id/fragment_one_show_automata_lin_layout_coin_input">


                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/coins"/>-->

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:id="@+id/insertCoin"
                        android:background="@drawable/insert_coin"
                        android:layout_gravity="center_horizontal" />




                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:id="@+id/fragment_one_show_automata_lin_layout_ticket_input">


                    <LinearLayout
                        android:layout_width="265dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <!-- <android.support.v4.widget.Space
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"/>

                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_horizontal"
                             android:text="@string/park_ticket"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="0dp"/>


                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>-->

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/insertTicket"
                            android:background="@drawable/insert_ticket" />

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>



            <com.example.michael.kassenautomat_dhbw.util.SquareImageButton
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:text="@string/dummy"
                android:scaleType="fitXY"
                android:src="@drawable/green_button"
                android:background="#00000000"
                android:id="@+id/fragment_one_show_automata_button_take_ticket"
                android:layout_gravity="center"
                android:contentDescription="@string/image_content_description"/>


    </LinearLayout>


</LinearLayout>


